[Symbols] support network and dex in symbol
