# packages/protocol/octobot_protocol/models/__init__.py
@@ -46,7 +46,6 @@ from octobot_protocol.models.create_account_configuration import CreateAccountCo
 from octobot_protocol.models.create_automation_configuration import CreateAutomationConfiguration
 from octobot_protocol.models.create_exchange_config_configuration import CreateExchangeConfigConfiguration
 from octobot_protocol.models.dca_configuration import DCAConfiguration
-from octobot_protocol.models.dex_config import DEXConfig
 from octobot_protocol.models.delete_account_configuration import DeleteAccountConfiguration
 from octobot_protocol.models.delete_exchange_config_configuration import DeleteExchangeConfigConfiguration
 from octobot_protocol.models.detailed_asset import DetailedAsset
