# packages/protocol/octobot_protocol/models/dex_config.py
@@ -1,94 +1,0 @@
-# coding: utf-8
-
-"""
-    OctoBot protocol types
-
-    No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
-
-    The version of the OpenAPI document: 1.0.0
-    Generated by OpenAPI Generator (https://openapi-generator.tech)
-
-    Do not edit the class manually.
-"""  # noqa: E501
-
-
-from __future__ import annotations
-import pprint
-import re  # noqa: F401
-import json
-
-from pydantic import BaseModel, ConfigDict, StrictStr
-from typing import Any, ClassVar, Dict, List, Optional
-from typing import Optional, Set
-from typing_extensions import Self
-from pydantic_core import to_jsonable_python
-
-class DEXConfig(BaseModel):
-    """
-    DEXConfig
-    """ # noqa: E501
-    chain_id: StrictStr
-    dex_id: StrictStr
-    base_token_addresses: Optional[List[StrictStr]] = None
-    quote_token_addresses: Optional[List[StrictStr]] = None
-    __properties: ClassVar[List[str]] = ["chain_id", "dex_id", "base_token_addresses", "quote_token_addresses"]
-
-    model_config = ConfigDict(
-        validate_by_name=True,
-        validate_by_alias=True,
-        validate_assignment=True,
-        protected_namespaces=(),
-    )
-
-
-    def to_str(self) -> str:
-        """Returns the string representation of the model using alias"""
-        return pprint.pformat(self.model_dump(by_alias=True))
-
-    def to_json(self) -> str:
-        """Returns the JSON representation of the model using alias"""
-        return json.dumps(to_jsonable_python(self.to_dict()))
-
-    @classmethod
-    def from_json(cls, json_str: str) -> Optional[Self]:
-        """Create an instance of DEXConfig from a JSON string"""
-        return cls.from_dict(json.loads(json_str))
-
-    def to_dict(self) -> Dict[str, Any]:
-        """Return the dictionary representation of the model using alias.
-
-        This has the following differences from calling pydantic's
-        `self.model_dump(by_alias=True)`:
-
-        * `None` is only added to the output dict for nullable fields that
-          were set at model initialization. Other fields with value `None`
-          are ignored.
-        """
-        excluded_fields: Set[str] = set([
-        ])
-
-        _dict = self.model_dump(
-            by_alias=True,
-            exclude=excluded_fields,
-            exclude_none=True,
-        )
-        return _dict
-
-    @classmethod
-    def from_dict(cls, obj: Optional[Dict[str, Any]]) -> Optional[Self]:
-        """Create an instance of DEXConfig from a dict"""
-        if obj is None:
-            return None
-
-        if not isinstance(obj, dict):
-            return cls.model_validate(obj)
-
-        _obj = cls.model_validate({
-            "chain_id": obj.get("chain_id"),
-            "dex_id": obj.get("dex_id"),
-            "base_token_addresses": obj.get("base_token_addresses"),
-            "quote_token_addresses": obj.get("quote_token_addresses")
-        })
-        return _obj
-
-
